tests/checker/ok/extern_wasm_sync.can
use wasi/clocks/wall_clock

main = () -> Unit {
    "ok".print()
}
