tests/checker/fail/package_directive_outside_deps.can
package "acme:http@1.0.0"

main = () -> Unit {
    "hi".print()
}
